fixed z-index issues in header

--- a/src/Components/Global/Header/index.css
+++ b/src/Components/Global/Header/index.css
@@ -5,6 +5,7 @@
     background-color: rgba(255, 255, 255, 0.339);
     backdrop-filter: blur(10px);
     /*color: white;*/
+    z-index: 100;
 }
 
 
@@ -13,6 +14,7 @@
     width: 100%;
     /*border-bottom: 1px solid black;*/
     padding: 0 10px;
+    z-index: 100;
 }
 .logoPart img{
     height: 40px;
