--- a/src/pages/TestPage/index.css
+++ b/src/pages/TestPage/index.css
@@ -1,5 +1,5 @@
 .testContainer{
-    position: relative;
+    /*position: relative;*/
     height: 100vh;
     width: 100%;
     /*border: 1px solid red;*/
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensures the image covers the container without distortion */
-    z-index: -1;
+    z-index: -2;
 }
 
 .testContainer h1{
@@ -36,5 +36,5 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.3); /* Optional overlay for contrast */
-    z-index: 0;
+    z-index: -1;
 }
